# obs_camera_move

./: .gitignore  CMakeLists.txt  FindOBS.cmake  LICENSE  README.md  copy_dll.bat  test_get_camera_name.py  test_get_camera_position.py  test_server.py  test_set_camera_names.py
src/: camera_controller.cpp  camera_controller.h  camera_easing.h  env_var.cpp  env_var.h  library.cpp  library.h  logger.cpp  logger.h  message_command.cpp  message_command.h  message_handler.cpp  message_handler.h  prerequisites.h  string_utils.cpp  string_utils.h  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h
test/: test_move_to.py  test_server.py
tools/: cammove.sln
tools/cammove_cli/: Program.cs  cammove_cli.sln
tools/cammove_shared/: Class1.cs
